Change default for crud

--- a/src/SuperAdmin/InterfaceBundle/Resources/config/routing/object.yml
+++ b/src/SuperAdmin/InterfaceBundle/Resources/config/routing/object.yml
@@ -1,6 +1,6 @@
-superadmin_interface_object_default:
-    pattern:  /
-    defaults: { _controller: SuperAdminInterfaceBundle:Object:default }
+superadmin_interface_object_crud:
+    pattern:  /crud
+    defaults: { _controller: SuperAdminInterfaceBundle:Object:crud }
     methods: [GET]
     
 superadmin_interface_object_edit:
