--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,13 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_js_routing:
+    routes_to_expose: [ (.*) ] 
+    
+#fos_user:
+#    db_driver: orm
+#    firewall_name: main
+#    user_class: CreditUnion\UserBundle\Entity\MyUser
+#    group:
+#        group_class: CreditUnion\UserBundle\Entity\MyGroup
