--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
         "angular": "~1.3.0",
         "angular-resource": "~1.3.0",
         "angular-route": "~1.3.0",
+        "angular-sanitize": "~1.3.0",
         "bootstrap": "3.1.*",
         "font-awesome": "4.1.*"
     }
