--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,6 +14,11 @@ admin_interface:
     prefix: /admin
     resource: "@AdminInterfaceBundle/Resources/config/routing.yml"
 
+superadmin_api:
+    prefix: /superadmin/api
+    resource: "@SuperAdminApiBundle/Resources/config/routing.yml"
+    
 superadmin_interface:
     prefix: /superadmin
     resource: "@SuperAdminInterfaceBundle/Resources/config/routing.yml"
+    
