--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/jsrouting-bundle": "~1.1",
-        "friendsofsymfony/user-bundle": "1.3.*"
+        "friendsofsymfony/user-bundle": "1.3.*",
+        "earls/flamingo-command-queue-bundle": "dev-master@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
@@ -59,5 +60,11 @@
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Earls/FlamingoCommandQueue.git"
+        }
+    ]
 }
